--- a/ok.html
+++ b/ok.html
@@ -10,7 +10,7 @@
     <main class="main-wpapper">
         <main class="main container">
             <p class="main-text-border">ВАШЕ МЕСТО ОФИЦИАЛЬНО ЗАБРОНИРОВАНО НА 07 МАРТА - ПОЖАЛУЙСТА, ПРОЧИТАЙТЕ НИЖЕ!</p>
-            <a href="mailto:info@protargeting.team>" class="main-email">Мы только что отправили вам важное сообщение для 07 марта! <br> Проверьте свою почту на test@test.com сейчас! </a>
+            <a href="mailto:info@protargeting.team" class="main-email">Мы только что отправили вам важное сообщение для 07 марта! <br> Проверьте свою почту на test@test.com сейчас! </a>
             <h1 class="main-title">* ЕСЛИ ВЫ НЕ ПОЛУЧИЛИ ПИСЬИМО, ПРОВЕРЬТЕ ПАПКУ СПАМ, ИЛИ  ПРОМОАКЦИИ   ПОСЛЕ, ПОСМОТРИТЕ ЭТО ВИДЕО!</h1>
         </main>
         <div class="ok-desing-left"></div>
