--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <p class="main-des">узнайте рабочие стратегии продажи запуска рекламных кампаний которые будут обречены 
                 на успех
             </p>
-            <a href="#" class="main-btn">Подробнее</a>
+            <a href="#about-us" class="main-btn">Подробнее</a>
             <div class="main-img"></div>
             <div class="main-like"></div>
         </main>
     </section>
     <section class="about-us-wrapper">
-        <ul class="about-us container">
+        <ul class="about-us container" id="about-us">
             <li class="about-us-item">
                 <img src="img/about-us/1.png" class="about-us-item__img" alt="">
                 <div class="about-us-item__content">
@@ -138,6 +138,7 @@
     <script src="js/intlTelInput.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/scrooll.js"></script>
 
     
 </body>
