--- a/ok.html
+++ b/ok.html
@@ -33,14 +33,16 @@
                     (+ получите бонус)  Чтобы попасть в список VIP пользователей на онлайн мастре-класс 07 марта ПЛЮС получить бонус, нажмите на кнопку ниже</p>
             </li>
             <li class="ok-content-list__item">
-                <div class="ok-content-list__number">
-                    <p class="ok-content-list__number-number">2</p>
-                    <p class="ok-content-list__number-text">шаг</p>
-                </div>
-                <p class="ok-content-list__text">Получить напоминание в<br>
-                    FB MESSENGER<br>
-                    и забрать свой бонус</p>
-                <img src="img/ok/messager.png" class="ok-content-list__img" alt="">
+                <a href="#" class="ok-content-list__item-link" target="_blanck">
+                    <div class="ok-content-list__number">
+                        <p class="ok-content-list__number-number">2</p>
+                        <p class="ok-content-list__number-text">шаг</p>
+                    </div>
+                    <p class="ok-content-list__text">Получить напоминание в<br>
+                        FB MESSENGER<br>
+                        и забрать свой бонус</p>
+                    <img src="img/ok/messager.png" class="ok-content-list__img" alt="">
+                </a>
             </li>
             <li class="ok-content-list__item">
                 <div class="ok-content-list__number">
@@ -85,6 +87,23 @@
         <a href="#" target="_blank" class="ok-content-btn">Получить напоминание в FB MESSENGER <br>
            <span>и забрать свой бонус</span></a>
     </section>
+    <footer class="container">
+        <ul class="footer-link">
+            <li>
+                <a href="documents/usloviya.pdf" target="_blank" class="footer-link__item">Условия оказания услуг</a>
+            </li>
+            <li>
+                <a href="documents/politika.pdf" target="_blank" class="footer-link__item">Политика конфиденциальности</a>
+            </li>
+           
+            <li>
+                <a href="documents/usloviya.pdf" target="_blank" class="footer-link__item">Условия предзаказа услуг</a>
+            </li>
+        </ul>
+        <p class="footer-text">© Корнеев Владислав & ProTargeting. Все права защищены. Любое копирование материалов разрешено только с согласия правообладателей. По всем вопросам обращайтесь:
+            <span>info@protargeting.team</span>
+        </p>
+    </footer>
     
 </body>
 </html>
