--- a/error.html
+++ b/error.html
@@ -15,7 +15,7 @@
                 <p class="header-info__time">Киев / 20:00 Мск</p>
             </div>
         </header>
-        <main class="main container">
+        <div class="main container">
             <div class="main-img"></div>
             <h1 class="main-title">Заголовок мастре-класса</h1>
             <p class="main-error-masseger">УПС...</p>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
         <div class="ok-desing-left"></div>
         <div class="ok-desing-right"></div>
     </section>
