--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
     <link  rel="stylesheet"  href="css/intlTelInput.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -18,7 +20,7 @@
         </div>
     </header>
     <section class="main-wrapper">
-        <main class="main container"> 
+        <div class="main container"> 
             <h1 class="main-title">Архитектура рекламных<br> кампаний на базе <span>Campaign<br> budget optimization (CBO)</span></h1>
             <p class="main-des">узнайте рабочие стратегии продажи запуска рекламных кампаний которые будут обречены 
                 на успех
@@ -26,7 +28,7 @@
             <a href="#about-us" class="main-btn">Подробнее</a>
             <div class="main-img"></div>
             <div class="main-like"></div>
-        </main>
+        </div>
     </section>
     <section class="about-us-wrapper">
         <ul class="about-us container" id="about-us">
