--- a/ok.html
+++ b/ok.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <main class="main-wpapper">
-        <main class="main container">
+        <div class="main container">
             <p class="main-text-border">ВАШЕ МЕСТО ОФИЦИАЛЬНО ЗАБРОНИРОВАНО НА 07 МАРТА - ПОЖАЛУЙСТА, ПРОЧИТАЙТЕ НИЖЕ!</p>
             <a href="mailto:info@protargeting.team" class="main-email">Мы только что отправили вам важное сообщение для 07 марта! <br> Проверьте свою почту на test@test.com сейчас! </a>
             <h1 class="main-title">* ЕСЛИ ВЫ НЕ ПОЛУЧИЛИ ПИСЬИМО, ПРОВЕРЬТЕ ПАПКУ СПАМ, ИЛИ  ПРОМОАКЦИИ   ПОСЛЕ, ПОСМОТРИТЕ ЭТО ВИДЕО!</h1>
-        </main>
+        </div>
         <div class="ok-desing-left"></div>
         <div class="ok-desing-right"></div>
     </main>
